--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="eSZ-8SqBMq6Ha47VHu_ut98X3B-CntMQmQXexD8T6zQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chaymassama | Photographie & Vidéographie</title>
  
