Add Freecash promo banners to index.html

--- a/index.html
+++ b/index.html
@@ -773,6 +773,23 @@
         </div>
     </section>
 
+<!-- Bannière Freecash juste après le Hero -->
+    <div class="promo-banner">
+        <div class="promo-content">
+            <span class="promo-text">
+                <i class="fas fa-gift" style="color: #FFD700;"></i> 
+                Vous appréciez mon travail ? 
+            </span>
+            <a href="https://freecash.com/r/chaymassama" target="_blank" class="promo-link" rel="noopener noreferrer">
+                <i class="fas fa-coins"></i>
+                Me soutenir via Freecash
+            </a>
+        </div>
+        <p style="font-size: 0.8rem; color: var(--accent-blue); margin-top: 0.8rem; font-style: italic;">
+            Gagnez des récompenses en testant des apps et soutenez mon activité créative gratuitement
+        </p>
+    </div>
+ 
     <!-- Prestations -->
     <section id="prestations">
         <h2 class="section-title">Nos Prestations</h2>
@@ -1048,6 +1065,22 @@
             </div>
         </form>
     </section>
+ <!-- Bannière Freecash après le formulaire de commande -->
+    <div class="promo-banner">
+        <div class="promo-content">
+            <span class="promo-text">
+                <i class="fas fa-gift" style="color: #FFD700;"></i> 
+                Vous appréciez mon travail ? 
+            </span>
+            <a href="https://freecash.com/r/chaymassama" target="_blank" class="promo-link" rel="noopener noreferrer">
+                <i class="fas fa-coins"></i>
+                Me soutenir via Freecash
+            </a>
+        </div>
+        <p style="font-size: 0.8rem; color: var(--accent-blue); margin-top: 0.8rem; font-style: italic;">
+            Gagnez des récompenses en testant des apps et soutenez mon activité créative gratuitement
+        </p>
+    </div>
 
     <!-- Contact & Partenariats -->
     <section id="contact" class="contact-section">
