Enhance footer with support information
Added support section with a link to freecash.com.

--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@
     </section>
 
     <!-- Footer -->
-    <footer>
+  <footer>
         <div class="footer-content">
             <div class="footer-brand">
                 <i class="fas fa-cloud"></i> Chaymassama
@@ -1140,6 +1140,13 @@
                 <strong>Belgique</strong> - Déplacements possibles partout en Europe
             </div>
             
+            <div class="footer-support">
+                <i class="fas fa-heart" style="color: #e74c3c;"></i> 
+                Soutenez mon travail : 
+                <a href="https://freecash.com/r/chaymassama" target="_blank" rel="noopener noreferrer">
+                    freecash.com/r/chaymassama
+                </a>
+            </div>
             <p style="margin-top: 1.5rem; opacity: 0.8; font-size: 0.9rem;">
                 © 2024 Chaymassama - Tous droits réservés | 
                 <a href="#" style="color: white;">Mentions légales</a>
