Refactor promo banner content in index.html
Updated promo banner text formatting and structure.

--- a/index.html
+++ b/index.html
@@ -1153,15 +1153,11 @@
     </section>
 
     <!-- Bannière Promotion Freecash - Intégration élégante -->
-    <div class="promo-banner">
+  <div class="promo-banner">
         <div class="promo-content">
-            <span class="promo-text">
-                <i class="fas fa-gift" style="color: #FFD700;"></i> 
-                Vous appréciez mon travail ? 
-            </span>
+            <span><i class="fas fa-gift" style="color: #FFD700;"></i> Vous appréciez mon travail ?</span>
             <a href="https://freecash.com/r/chaymassama" target="_blank" class="promo-link" rel="noopener noreferrer">
-                <i class="fas fa-coins"></i>
-                Me soutenir via Freecash
+                <i class="fas fa-coins"></i> Me soutenir via Freecash
             </a>
         </div>
         <p style="font-size: 0.8rem; color: var(--accent-blue); margin-top: 0.8rem; font-style: italic;">
