Add styled footer section to index.html

--- a/index.html
+++ b/index.html
@@ -820,6 +820,52 @@
             color: #e74c3c;
             font-size: 1.1em;
         }
+/* --- Footer doré Freecash --- */
+footer.freecash-footer {
+    background: transparent;
+    display: flex;
+    justify-content: center;
+    padding: 3rem 1rem;
+}
+
+footer.freecash-footer .footer-box {
+    background: rgba(255, 223, 0, 0.1); /* doré léger */
+    border: 2px solid #FFD700;          /* bord doré */
+    border-radius: 20px;
+    padding: 2rem 3rem;
+    max-width: 600px;
+    text-align: center;
+    box-shadow: 0 4px 20px rgba(255, 215, 0, 0.2);
+}
+
+footer.freecash-footer .footer-brand {
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
+footer.freecash-footer p {
+    margin: 0.3rem 0;
+    font-size: 0.95rem;
+    color: var(--deep-blue);
+}
+
+footer.freecash-footer a.freecash-btn {
+    display: inline-block;
+    margin: 0.5rem 0;
+    padding: 0.8rem 1.5rem;
+    background: #FFD700;
+    color: var(--deep-blue);
+    font-weight: 700;
+    border-radius: 50px;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+footer.freecash-footer a.freecash-btn:hover {
+    background: #FFC107;
+    transform: translateY(-2px);
+    box-shadow: 0 5px 15px rgba(255, 215, 0, 0.3);
+}
     </style>
 </head>
 <body>
