--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="google-site-verification" content="JpsYykzwaCATkrDPAhGlFVuBeZXdRlqmOCpxk-vb73M" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chaymassama | Photographie & Vidéographie</title>
- 
-    <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png?v=2">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=2"> 
- 
+    
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"> 
+
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
  
