--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -821,28 +821,25 @@
             font-size: 1.1em;
         }
 
-        /* Info box for video pricing */
-        .info-box {
-            background: linear-gradient(135deg, rgba(30, 95, 142, 0.05) 0%, rgba(74, 144, 184, 0.1) 100%);
-            border-left: 4px solid var(--deep-blue);
-            padding: 1.5rem;
-            margin: 2rem 0;
-            border-radius: 0 15px 15px 0;
-            text-align: left;
+        /* Video pricing tiers */
+        .video-tier {
+            background: rgba(255,255,255,0.5);
+            padding: 1rem;
+            margin: 0.5rem 0;
+            border-radius: 10px;
+            border-left: 3px solid var(--accent-blue);
         }
 
-        .info-box h4 {
-            color: var(--deep-blue);
-            margin-bottom: 0.5rem;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
+        .video-tier.simple {
+            border-left-color: #27ae60;
         }
 
-        .info-box p {
-            color: var(--text-dark);
-            line-height: 1.6;
-            font-size: 0.95rem;
+        .video-tier.complex {
+            border-left-color: #e67e22;
+        }
+
+        .video-tier.premium {
+            border-left-color: var(--deep-blue);
         }
 
         /* --- Footer doré Freecash --- */
@@ -890,27 +887,6 @@
             background: #FFC107;
             transform: translateY(-2px);
             box-shadow: 0 5px 15px rgba(255, 215, 0, 0.3);
-        }
-
-        /* Video pricing tiers */
-        .video-tier {
-            background: rgba(255,255,255,0.5);
-            padding: 1rem;
-            margin: 0.5rem 0;
-            border-radius: 10px;
-            border-left: 3px solid var(--accent-blue);
-        }
-
-        .video-tier.simple {
-            border-left-color: #27ae60;
-        }
-
-        .video-tier.complex {
-            border-left-color: #e67e22;
-        }
-
-        .video-tier.premium {
-            border-left-color: var(--deep-blue);
         }
     </style>
 </head>
@@ -1093,11 +1069,6 @@
                     • 1 vidéo principale + reels éventuels</small>
                 </div>
 
-                <div class="info-box">
-                    <h4><i class="fas fa-lightbulb"></i> Règle d'or</h4>
-                    <p>Basé sur <strong>50€/heure de travail réel</strong>. Une journée de tournage + montage représente souvent 2 à 3 jours de travail. Je me positionne comme professionnel en 2026, pas comme étudiant.</p>
-                </div>
-
                 <ul class="pricing-features" style="margin-top: 1rem;">
                     <li>
                         <span>Montage professionnel</span>
@@ -1158,17 +1129,6 @@
                     <i class="fas fa-gift"></i> Forfait sur mesure selon vos besoins
                 </p>
             </div>
-        </div>
-
-        <div style="text-align: center; margin-top: 3rem; padding: 2rem; background: rgba(255,255,255,0.6); border-radius: 20px;">
-            <h3 style="color: var(--deep-blue); margin-bottom: 1rem;">💡 Pourquoi ces tarifs vidéo ?</h3>
-            <p style="max-width: 800px; margin: 0 auto; line-height: 1.8;">
-                <strong>2h de tournage = 3-6h de montage</strong> (reel/vidéo courte)<br>
-                <strong>4h de tournage = 6-10h de montage</strong> (1 à 3 vidéos finales)<br>
-                <strong>8h de tournage = 2-3 jours de travail réel</strong> (vidéo principale + contenus)<br><br>
-                Facturer moins de 900€ pour une journée complète + montage revient à travailler presque gratuitement. 
-                Pour vivre de ma passion en 2026, je dois me positionner comme un professionnel, pas comme un étudiant en job d'été.
-            </p>
         </div>
     </section>
 
@@ -1260,7 +1220,7 @@
                         <p>Estimation du devis :</p>
                         <div class="estimate-price" id="estimatePrice">150€ - 300€</div>
                         <p style="font-size: 0.9rem; color: var(--accent-blue); margin-top: 0.5rem;">
-                            * Prix indicatif basé sur 50€/heure de travail réel, devis final sous 24 h
+                            * Prix indicatif, devis final sous 24 h
                         </p>
                     </div>
                 </div>
